--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.0",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
